--- a/app/_components/header/_nav/nav.module.scss
+++ b/app/_components/header/_nav/nav.module.scss
@@ -84,7 +84,7 @@
     padding: .5em 1em;
 
     &:hover {
-      color: $link-hover; // Muda a cor ao passar o mouse
+      color: $color-complements; // Muda a cor ao passar o mouse
     }
   }
 }
