--- a/app/home/heroSection/Hero.module.scss
+++ b/app/home/heroSection/Hero.module.scss
@@ -41,6 +41,47 @@
         line-height: 1.3em;
         font-weight: 500;
         font-family: "Spectral", serif;
+        margin-bottom: .5em;
+    }
+
+    h2 {
+        background: linear-gradient(90deg, rgb(0, 43, 115) 0%, rgb(127, 5, 37) 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        color: transparent;
+        font-family: brother-1816, sans-serif;
+        font-size: 1.5rem;
+        font-weight: 300;
+
+        span {
+            background: linear-gradient(90deg, rgb(0, 43, 115) 0%, rgb(127, 5, 37) 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            color: transparent;
+        }
+    }
+
+    &__socialLinkContainer {
+        display: flex;
+        align-items: center;
+        column-gap: 1rem;
+        margin-top: 1em;
+    }
+
+    &__button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: rgba(0, 0, 0, 0.7);
+        font-size: 1.5rem;
+        text-decoration: none;
+        transition: transform 0.4s ease;
+
+        &:hover {
+            transform: scale(1.2);
+        }
     }
 
 }
