--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -1,18 +1,21 @@
-// dark mode
+$brand-dark-blue: #002259;
+$brand-light-blue: #0041b3;
+$brand-golden: #fcab04;
+$brand-red: #800022;
 
-$brand-dark-blue: rgb(0, 14, 15);
-$brand-light-blue: rgb(0, 43, 115);
+$text-light: rgb(206, 206, 206);
+$text-dark: rgb(29, 29, 29);
 
-$brand-golden: rgb(214, 128, 3);
-$brand-red: rgb(127, 5, 37);
+$color-complements: #0098ff;
 
-$text-light: rgba(244, 244, 245, 1);
-$text-dark: rgba(161, 161, 170, 1);
+$band-blue-50: #e9f8ff;
+$band-blue-100: #6bdaff;
+$band-blue-200: #0053ff;
 
-$color-complements: rgb(60, 131, 255);
+$brand-golden-50: #fffcea;
+$brand-golden-100: #ffde48;
+$brand-golden-200: #b95a04;
 
-$card-hover: rgba(113, 113, 119, 0.1);
-$link-hover: rgb(193, 224, 236);
-$link-active: rgba(119, 197, 252, 1);
-
-// light mode
+$brand-red-50: #ffeef3;
+$brand-red-100: #ff8baa;
+$brand-red-200: #e7003d;
