--- a/app/_components/button/Button.module.scss
+++ b/app/_components/button/Button.module.scss
@@ -3,7 +3,7 @@
 
 
 .button {
-    color: $brand-light-blue;
+    color: $brand-dark-blue;
     text-decoration: none;
     font-size: 1.2em;
     cursor: pointer;
