--- a/app/home/heroSection/Hero.module.scss
+++ b/app/home/heroSection/Hero.module.scss
@@ -34,7 +34,7 @@
     }
 
     &__text {
-        color: $brand-dark-blue;
+        color: $text-dark;
         width: 50%;
         font-size: 1.3em;
         margin-top: .5em;
