--- a/app/home/bookSection/Book.module.scss
+++ b/app/home/bookSection/Book.module.scss
@@ -44,6 +44,7 @@
             font-size: 1.3em;
             margin-bottom: 0.5em;
             color: $text-dark;
+            font-weight: 500;
         }
 
         p {
