--- a/app/home/section/Section.module.scss
+++ b/app/home/section/Section.module.scss
@@ -1,5 +1,5 @@
 .section {
     width: 100%;
     height: 100vh;
-    background-color: rgb(255, 242, 224);
+    background-color: rgba(255, 252, 234, 0.3);
 }
