--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -19,3 +19,5 @@ $brand-golden-200: #b95a04;
 $brand-red-50: #ffeef3;
 $brand-red-100: #ff8baa;
 $brand-red-200: #e7003d;
+
+$border-light: rgba(29, 29, 29, .2);
