cosntruindo a pagina sobre

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -4,13 +4,14 @@ $brand-golden: #fcab04;
 $brand-red: #800022;
 
 $text-light: rgb(236, 236, 236);
+$text-midle: rgb(102, 102, 102);
 $text-dark: rgb(29, 29, 29);
 
 $color-complements: #0098ff;
 
-$band-blue-50: #e9f8ff;
-$band-blue-100: #6bdaff;
-$band-blue-200: #0053ff;
+$brand-blue-50: #e9f8ff;
+$brand-blue-100: #6bdaff;
+$brand-blue-200: #0053ff;
 
 $brand-golden-50: #fffcea;
 $brand-golden-100: #ffde48;
