--- a/app/home/section/Section.module.scss
+++ b/app/home/section/Section.module.scss
@@ -1,5 +1,33 @@
+@import '../../styles/variables';
+@import '../../styles/breakpoints';
+
 .section {
+    background-image: url('../../../public/assets/marco-rodrigues-coach-business.webp');
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+
     width: 100%;
     height: 100vh;
-    background-color: rgba(255, 252, 234, 0.3);
+
+    padding: 4em 8em;
+
+    &__container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        width: 100%;
+        max-width: 1440px;
+    }
+
+    &__content {
+        width: 50%;
+        color: $text-light;
+    }
 }
