--- a/app/home/talkkSection/Talk.module.scss
+++ b/app/home/talkkSection/Talk.module.scss
@@ -28,12 +28,13 @@
         }
 
         &__text {
-            color: $text-light;
-            font-size: 1.2em;
-            font-weight: 400;
-            margin-bottom: 1.5em;
-            text-align: center;
+            font-size: 18px;
+            font-weight: 500;
             font-family: "Spectral", serif;
+            line-height: 25px;
+            color: $text-light;
+            text-align: center;
+            margin-bottom: 1.5em;
         }
     }
 }
