--- a/app/sobre/heroTop/AboutHero.module.scss
+++ b/app/sobre/heroTop/AboutHero.module.scss
@@ -12,6 +12,7 @@
     background-position: center left;
     background-repeat: no-repeat;
     background-size: cover;
+    background-color: $text-dark;
 
     &__container {
         display: grid;
