--- a/app/home/bookSection/Book.module.scss
+++ b/app/home/bookSection/Book.module.scss
@@ -14,6 +14,13 @@
     height: 100vh;
     padding: 0 8em;
 
+    @media (max-width: $desktop_sm) {
+            padding: 2em 1em;
+            height: auto;
+            flex-wrap: wrap;
+            justify-content: start;
+        }
+
     background: 
     linear-gradient(rgba(245, 245, 250, 0.6), rgba(230, 230, 235, 1)), // overlay escuro
     url('/assets/mrSimbol.svg') center/85% no-repeat;
@@ -25,6 +32,10 @@
         align-items: flex-start;
         width: 50%;
         max-width: 800px;
+
+        @media (max-width: $desktop_sm) {
+            width: 100%;
+        }
 
         h2 {
             font-size: 2em;
@@ -64,6 +75,11 @@
         align-items: center;
         column-gap: 1em;
         width: 50%;
+
+        @media (max-width: $desktop_sm) {
+            width: 100%;
+            flex-direction: column;
+        }
 
         img {
             border-radius: 10px;
