--- a/app/home/channelSection/Channel.module.scss
+++ b/app/home/channelSection/Channel.module.scss
@@ -10,11 +10,21 @@
     width: 100%;
     max-width: 1440px;
 
+    @media (max-width: $desktop_sm) {
+            display: flex;
+            flex-direction: column;
+            padding: 2em 1em;
+        }
+
     &__content {
         display: flex;
         flex-direction: column;
         grid-column: 1;
         padding-left: 8em;
+
+        @media (max-width: $desktop_sm) {
+            padding: 0;
+        }
 
         &__tag {
             font-size: 24px;
@@ -58,6 +68,13 @@
 
         &__video {
             margin-bottom: 2em;
+            
+            iframe {
+                width: 100%;
+                height: 100%;
+                aspect-ratio: 16/9;
+                border-radius: 8px;
+            }   
         }
 
         h3 {
