--- a/app/home/heroSection/Hero.module.scss
+++ b/app/home/heroSection/Hero.module.scss
@@ -19,6 +19,10 @@
 
     padding: 0 8em;
 
+    @media (max-width: $desktop_sm) {
+        padding: 4em 1em;
+    }
+
     &__title {
         display: inline-block;
         background-color: rgba(0, 0, 0, 0.5);
