--- a/app/home/partnersSection/Partnners.module.scss
+++ b/app/home/partnersSection/Partnners.module.scss
@@ -12,6 +12,10 @@
 
     padding: 2em 8em;
 
+    @media (max-width: $desktop_sm) {
+            padding: 2em 0;
+        }
+
     &__title {
         font-size: 1.2em;
         font-weight: 400;
@@ -26,6 +30,11 @@
     flex-direction: row;
     justify-content: center;
     column-gap: 4em;
+
+    @media (max-width: $desktop_sm) {
+            column-gap: 1em;
+            flex-wrap: wrap;
+        }
 }
 .imageContainer {
     display: flex;
