--- a/app/home/heroSection/Hero.module.scss
+++ b/app/home/heroSection/Hero.module.scss
@@ -20,7 +20,10 @@
     padding: 0 8em;
 
     @media (max-width: $desktop_sm) {
-        padding: 4em 1em;
+        padding: 15em 1em 2em;
+        height: 75vh;
+
+        background-position: 62% center;
     }
 
     &__title {
