--- a/app/home/channelSection/Channel.module.scss
+++ b/app/home/channelSection/Channel.module.scss
@@ -24,6 +24,7 @@
 
         @media (max-width: $desktop_sm) {
             padding: 0;
+            margin-bottom: 2em;
         }
 
         &__tag {
