--- a/app/home/heroSection/Hero.module.scss
+++ b/app/home/heroSection/Hero.module.scss
@@ -38,6 +38,11 @@
         padding: .3rem .7rem;
         text-shadow: -1px 3px 1px rgba(0, 0, 0, 0.8);
         margin-bottom: .1em;
+
+        @media (max-width: $desktop_sm) {
+            font-family: brother-1816, sans-serif;
+        }
+
     }
 
     &__text {
@@ -49,6 +54,10 @@
         font-weight: 500;
         font-family: "Spectral", serif;
         margin-bottom: .5em;
+
+        @media (max-width: $desktop_sm) {
+            width: 100%
+        }
     }
 
     h2 {
