--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -22,3 +22,6 @@ $brand-red-100: #ff8baa;
 $brand-red-200: #e7003d;
 
 $border-light: rgba(29, 29, 29, .2);
+
+$font-primary: "Afacad", sans-serif;
+$font-secondary: "Spectral", serif;
