--- a/app/home/aboutSection/About.module.scss
+++ b/app/home/aboutSection/About.module.scss
@@ -7,7 +7,6 @@
     justify-content: space-around;
     background-color: $brand-golden;
     width: 100%;
-    max-width: 1440px;
     padding: 4em 8em;
     gap: 3em;
 
@@ -32,7 +31,7 @@
 
         &__tag {
             font-size: 24px;
-            font-family: brother-1816, sans-serif;
+            font-family: $font-primary;
             line-height: 25px;
             color: $text-dark;
             margin-bottom: 0.5em;
@@ -51,7 +50,7 @@
 
         &__title {
             font-size: 28px;
-            font-family: brother-1816, sans-serif;
+            font-family: $font-primary;
             line-height: 30px;
             color: $text-dark;
             margin-bottom: .5em;
@@ -68,7 +67,7 @@
         &__text {
             font-size: 18px;
             font-weight: 500;
-            font-family: "Spectral", serif;
+            font-family: $font-secondary;
             line-height: 25px;
             color: $text-dark;
             margin-bottom: 1em;
