--- a/app/home/bookSection/Book.module.scss
+++ b/app/home/bookSection/Book.module.scss
@@ -10,9 +10,7 @@
     column-gap: 5%;
     align-items: center;
     width: 100%;
-    max-width: 1440px;
-    height: 100vh;
-    padding: 0 8em;
+    padding: 8em;
 
     @media (max-width: $desktop_sm) {
         padding: 4em 1em;
