--- a/app/home/channelSection/cards/Cards.module.scss
+++ b/app/home/channelSection/cards/Cards.module.scss
@@ -10,7 +10,7 @@
 
     &__title {
         font-size: 24px;
-        font-family: brother-1816, sans-serif;
+        font-family: $font-primary;
         color: $text-dark;
         margin-bottom: 0.5em;
 
@@ -26,7 +26,7 @@
     &__description {
         font-size: 18px;
         font-weight: 500;
-        font-family: "Spectral", serif;
+        font-family: $font-secondary;
         line-height: 25px;
         color: $text-dark;
         margin-bottom: 1.5em;
