--- a/app/home/heroSection/Hero.module.scss
+++ b/app/home/heroSection/Hero.module.scss
@@ -1,7 +1,6 @@
 @import '../../styles/variables';
 @import '../../styles/breakpoints';
 
-@import url("https://use.typekit.net/quo2rwy.css");
 
 .heroSection {
     background-image: url('../../../public/assets/image-hero-top.jpg');
@@ -29,18 +28,19 @@
     &__title {
         display: inline-block;
         background-color: rgba(0, 0, 0, 0.5);
-        /* fundo escuro com transparência */
+        font-family: "Afacad", sans-serif;
         color: white;
-        font-family: brother-1816, sans-serif;
         font-size: 2rem;
         text-transform: uppercase;
-        font-weight: 500;
+        font-weight: 700;
         padding: .3rem .7rem;
         text-shadow: -1px 3px 1px rgba(0, 0, 0, 0.8);
         margin-bottom: .1em;
 
         @media (max-width: $desktop_sm) {
-            font-family: brother-1816, sans-serif;
+            align-self: flex-start;
+            margin-bottom: 0.2em;
+            font-size: 1.5em;
         }
 
     }
@@ -52,30 +52,32 @@
         margin-top: .5em;
         line-height: 1.3em;
         font-weight: 500;
-        font-family: "Spectral", serif;
+        font-family: $font-secondary;
         margin-bottom: .5em;
 
         @media (max-width: $desktop_sm) {
-            width: 100%
+            width: 100%;
+            font-size: 1.4em;
+            color: $text-light;
+            text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.8);
         }
     }
 
     h2 {
-        background: linear-gradient(90deg, rgb(0, 43, 115) 0%, rgb(127, 5, 37) 100%);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-clip: text;
-        color: transparent;
-        font-family: brother-1816, sans-serif;
+        font-family: $font-primary;
         font-size: 1.5rem;
-        font-weight: 300;
+        font-weight: 700;
+        color: $text-light;
+        text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.8);
 
-        span {
-            background: linear-gradient(90deg, rgb(0, 43, 115) 0%, rgb(127, 5, 37) 100%);
+        @media (min-width: $desktop_sm) {
+            width: 100%;
+            background: linear-gradient(90deg, rgb(0, 43, 115) 0%, rgb(127, 5, 37) 20%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
             color: transparent;
+            text-shadow: none;
         }
     }
 
