--- a/app/livros/Livros.module.scss
+++ b/app/livros/Livros.module.scss
@@ -4,7 +4,54 @@
 .livrosPage {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+    width: 100%;
+
+    background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), // overlay branco translúcido
+        url('/assets/books-bg-red.webp');
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed; // efeito parallax
+
+    &__top {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        padding: 8em 8em 2em;
+        background: linear-gradient(90deg, rgba(0, 43, 115, 1) 0%, rgba(127, 5, 37, 1) 100%);
+
+        @media (max-width: $desktop_sm) {
+            padding: 8em 1em 2em;
+        }
+
+        &__image {
+            width: 50%;
+        }
+
+        &__title {
+            font-size: 2.5em;
+            font-weight: 700;
+            color: $text-light;
+            text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.9);
+            text-align: center;
+            margin-bottom: 0.5em;
+        }
+
+        &__text {
+            font-size: 1.2em;
+            font-weight: 500;
+            font-family: "Spectral", serif;
+            line-height: 1.5em;
+            color: $text-light;
+            margin-bottom: 1.5em;
+            text-align: center;
+            width: 70%;
+
+            @media (max-width: $desktop_sm) {
+                width: 100%;
+            }
+
+        }
+    }
 }
