--- a/app/sobre/biografiaSection/Biografia.module.scss
+++ b/app/sobre/biografiaSection/Biografia.module.scss
@@ -10,16 +10,25 @@
     &__container {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        column-gap: 3em;
+        gap: 3em;
         padding: 4em 0;
         width: 100%;
         max-width: 1440px;
+
+        @media (max-width: $desktop_sm) {
+            grid-template-columns: repeat(1, 1fr);
+        }
 
         &__content {
             display: flex;
             flex-direction: column;
             grid-column: 1;
             padding-left: 8em;
+
+            @media (max-width: $desktop_sm) {
+                padding-left: 0em;
+                padding: 0 1em;
+            }
 
             &__title {
                 font-size: 32px;
@@ -47,6 +56,11 @@
             width: 100%;
             height: auto;
 
+            @media (max-width: $desktop_sm) {
+                grid-column: 1;
+                grid-row: 2;
+            }
+
             img {
                 width: 100%;
                 max-width: 500px;
@@ -58,6 +72,10 @@
                 font-family: "Spectral", serif;
                 color: $text-dark;
                 margin-top: .5em;
+                
+                @media (max-width: $desktop_sm) {
+                    padding-left: 1em;
+                }
             }
         }
     }
