--- a/app/sobre/heroTop/AboutHero.module.scss
+++ b/app/sobre/heroTop/AboutHero.module.scss
@@ -14,14 +14,27 @@
     background-size: cover;
     background-color: $text-dark;
 
+    @media (max-width: $desktop_sm) {
+        padding: 0 1em;
+        height: 70vh;
+        background-size: cover;
+        justify-content: flex-end;
+    }
+
     &__container {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        column-gap: 3em;
+        gap: 3em;
         padding: 4em 0;
         width: 100%;
         height: auto;
         max-width: 1440px;
+
+        @media (max-width: $desktop_sm) {
+            grid-template-columns: repeat(1, 1fr);
+            padding: 0;
+            padding-bottom: 3em;
+        }
 
         &__content {
             display: flex;
@@ -29,14 +42,19 @@
             grid-column: 2;
             padding-right: 8em;
 
+            @media (max-width: $desktop_sm) {
+                grid-column: 1;
+                padding-right: 0em;
+            }
+
             &__title {
                 font-size: 40px;
-                font-family: brother-1816, sans-serif;
                 font-weight: 300;
                 text-transform: uppercase;
                 line-height: 38px;
                 color: $text-light;
                 margin-bottom: 0.2em;
+                text-shadow: 0 2px 3px rgba(0,0,0,1);
 
                 span {
                     font-weight: 900;
