--- a/app/sobre/valoresSection/Valores.module.scss
+++ b/app/sobre/valoresSection/Valores.module.scss
@@ -8,18 +8,30 @@
     width: 100%;
     padding: 4em 0;
 
+    @media (max-width: $desktop_sm) {
+        padding: 4em 1em;
+    }
+
     &__container {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        column-gap: 3em;
+        gap: 3em;
         width: 100%;
         max-width: 1440px;
+
+        @media (max-width: $desktop_sm) {
+            grid-template-columns: repeat(1, 1fr);
+        }
 
         &__content {
             display: flex;
             flex-direction: column;
             grid-column: 1;
             padding-left: 8em;
+
+            @media (max-width: $desktop_sm) {
+                padding-left: 0em;
+            }
 
             &__title {
                 font-size: 32px;
@@ -43,6 +55,10 @@
                 font-size: 24px;
                 font-weight: 700;
                 margin-bottom: 1em;
+
+                @media (max-width: $desktop_sm) {
+                    margin-bottom: 3em;
+                }
             }
 
             &__text {
@@ -70,6 +86,11 @@
                     background-size: contain;
                     background-repeat: no-repeat;
                     background-position: center;
+
+                    @media (max-width: $desktop_sm) {
+                        top: -65px;
+                        left: 35%;
+                    }
                 }
 
                 &__item {
@@ -100,6 +121,12 @@
             justify-content: center;
             width: 100%;
 
+            @media (max-width: $desktop_sm) {
+                grid-column: 1;
+                grid-row: 2;
+            }
+
+
             img {
                 width: 524px;
                 max-width: 100%;
@@ -112,6 +139,10 @@
                 font-family: "Spectral", serif;
                 color: $text-dark;
                 margin-top: .5em;
+
+                @media (max-width: $desktop_sm) {
+                    padding-left: 1em;
+                }
             }
         }
     }
