--- a/app/sobre/biografiaSection/Biografia.module.scss
+++ b/app/sobre/biografiaSection/Biografia.module.scss
@@ -64,6 +64,7 @@
             img {
                 width: 100%;
                 max-width: 500px;
+                height: auto;
             }
 
             &__caption {
