--- a/app/sobre/valoresSection/Valores.module.scss
+++ b/app/sobre/valoresSection/Valores.module.scss
@@ -21,6 +21,7 @@
 
         @media (max-width: $desktop_sm) {
             grid-template-columns: repeat(1, 1fr);
+            gap: 0em;
         }
 
         &__content {
@@ -57,7 +58,7 @@
                 margin-bottom: 1em;
 
                 @media (max-width: $desktop_sm) {
-                    margin-bottom: 3em;
+                    margin-bottom: 4em;
                 }
             }
 
@@ -68,6 +69,10 @@
                 line-height: 25px;
                 color: $text-dark;
                 margin-bottom: 2em;
+
+                @media (max-width: $desktop_sm) {
+                    margin-bottom: 4em;
+                }
             }
 
             &__list {
@@ -105,9 +110,11 @@
 
                     p {
                         font-size: 18px;
-                        font-weight: 400;
-                        color: $text-midle;
+                        font-weight: 500;
                         font-family: "Spectral", serif;
+                        line-height: 25px;
+                        color: $text-dark;
+                        margin-bottom: 2em;
                     }
                 }
             }
@@ -139,10 +146,6 @@
                 font-family: "Spectral", serif;
                 color: $text-dark;
                 margin-top: .5em;
-
-                @media (max-width: $desktop_sm) {
-                    padding-left: 1em;
-                }
             }
         }
     }
