corrigindo o header ajuste

--- a/app/_components/header/header.module.scss
+++ b/app/_components/header/header.module.scss
@@ -16,7 +16,7 @@
     width: 100%;
 
     @media (max-width: $desktop_sm) {
-        flex-direction: column;
+        flex-direction: row;
     }
 }
 
