--- a/app/home/section/Section.module.scss
+++ b/app/home/section/Section.module.scss
@@ -15,7 +15,12 @@
     width: 100%;
     height: 100vh;
 
-    padding: 4em 8em;
+    padding: 0 8em;
+
+    @media (max-width: $desktop_sm) {
+        padding: 6em 1em;
+        justify-content: flex-start;
+    }
 
     &__container {
         display: flex;
@@ -24,10 +29,80 @@
         align-items: flex-start;
         width: 100%;
         max-width: 1440px;
+
+        &__content {
+            width: 50%;
+
+            @media (max-width: $desktop_sm) {
+                width: 100%;
+            }
+
+            &__title {
+                font-size: 2.5rem;
+                font-weight: 900;
+                color: $text-light;
+                text-align: center;
+                position: relative;
+                color: $text-light;
+                text-shadow: 0 2px 3px rgba(0, 0, 0, 1);
+
+                @media (max-width: $desktop_sm) {
+                    font-size: 3rem;
+                    text-align: center;
+                }
+
+                &::before {
+                    content: "";
+                    display: block;
+                    position: absolute;
+                    width: 70px;
+                    height: 70px;
+                    top: -55px;
+                    left: -40px;
+                    background-image: url('/assets/abreAspas-branco.svg');
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    opacity: .5;
+
+                    @media (max-width: $desktop_sm) {
+                        top: -70px;
+                        left: 25px;
+                    }
+                }
+
+                &::after {
+                    content: "";
+                    display: block;
+                    position: absolute;
+                    width: 70px;
+                    height: 70px;
+                    bottom: -30px;
+                    right: 0;
+                    background-image: url('/assets/fechaAspas-branco.svg');
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    opacity: .5;
+
+                    @media (max-width: $desktop_sm) {
+                        bottom: -80px;
+                        right: 15px;
+                    }
+                }
+            }
+
+            &__selo {
+                width: 50%;
+                height: auto;
+                margin-bottom: 8em;
+
+                @media (min-width: $desktop_sm) {
+                    width: 25%;
+                    margin-bottom: 6em;
+                }
+            }
+        }
     }
 
-    &__content {
-        width: 50%;
-        color: $text-light;
-    }
 }
