--- a/app/home/channelSection/Channel.module.scss
+++ b/app/home/channelSection/Channel.module.scss
@@ -28,7 +28,7 @@
         }
 
         &__tag {
-            font-size: 24px;
+            font-size: $subtitle-size;
             font-family: $font-primary;
             line-height: 25px;
             color: $text-dark;
@@ -43,7 +43,7 @@
         }
 
         h2 {
-            font-size: 32px;
+            font-size: $title-size;
             font-family: $font-primary;
             line-height: 35px;
             color: $text-dark;
@@ -59,10 +59,10 @@
         }
 
         P {
-            font-size: 18px;
+            font-size: $text-size;
             font-weight: 500;
             font-family: $font-secondary;
-            line-height: 25px;
+            line-height: 28px;
             color: $text-dark;
             margin-bottom: 1.5em;
         }
