--- a/app/sobre/citacaoSection/Citacao.module.scss
+++ b/app/sobre/citacaoSection/Citacao.module.scss
@@ -20,10 +20,11 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        width: 70%;
+        width: 55%;
+        max-width: 1440px;
 
         &__title {
-            font-size: 2.5rem;
+            font-size: $title-size;
             font-weight: 900;
             color: $text-midle;
             text-align: center;
