--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -25,3 +25,7 @@ $border-light: rgba(29, 29, 29, .2);
 
 $font-primary: "Afacad", sans-serif;
 $font-secondary: "Spectral", serif;
+
+$title-size: 32px;
+$subtitle-size: 24px;
+$text-size: 20px;
