--- a/app/home/channelSection/cards/card/Card.module.scss
+++ b/app/home/channelSection/cards/card/Card.module.scss
@@ -41,9 +41,10 @@
     }
 
     &__description {
+        font-size: $text-size;
         font-weight: 500;
-        font-family: "Spectral", serif;
-        line-height: 25px;
+        font-family: $font-secondary;
+        line-height: 28px;
         color: $text-dark;
         width: 100%;
         padding: 0 1em;
