--- a/app/home/heroSection/Hero.module.scss
+++ b/app/home/heroSection/Hero.module.scss
@@ -16,7 +16,6 @@
     width: 100%;
     height: 100vh;
 
-    padding: 0 8em;
 
     @media (max-width: $desktop_sm) {
         padding: 15em 1em 2em;
@@ -26,11 +25,12 @@
     }
 
     &__title {
+        align-self: self-start;
         display: inline-block;
         background-color: rgba(0, 0, 0, 0.5);
         font-family: "Afacad", sans-serif;
         color: white;
-        font-size: 2rem;
+        font-size: $title-size;
         text-transform: uppercase;
         font-weight: 700;
         padding: .3rem .7rem;
@@ -48,9 +48,9 @@
     &__text {
         color: $text-dark;
         width: 50%;
-        font-size: 1.3em;
+        font-size: $text-size;
         margin-top: .5em;
-        line-height: 1.3em;
+        line-height: 28px;
         font-weight: 500;
         font-family: $font-secondary;
         margin-bottom: .5em;
@@ -65,7 +65,7 @@
 
     h2 {
         font-family: $font-primary;
-        font-size: 1.5rem;
+        font-size: $subtitle-size;
         font-weight: 700;
         color: $text-light;
         text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.8);
@@ -102,4 +102,17 @@
         }
     }
 
+}
+
+.containerHero{
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	max-width: 1440px;
+	margin: 0 auto;
+    padding: 0 8em;
+
+    @media (max-width: $desktop_sm) {
+        padding: 0;
+    }
 }
