--- a/app/home/partnersSection/Partnners.module.scss
+++ b/app/home/partnersSection/Partnners.module.scss
@@ -13,18 +13,18 @@
     padding: 2em 8em;
 
     @media (max-width: $desktop_sm) {
-            padding: 2em 0;
-        }
+        padding: 2em 1em;
+    }
 
     &__title {
-        font-size: 1.2em;
-        font-weight: 400;
+        font-size: $subtitle-size;
+        font-weight: 700;
         text-align: center;
-        font-family: brother-1816, sans-serif;
+        font-family: $font-primary;
         margin-bottom: 1em;
     }
 }
- 
+
 .logosContainer {
     display: flex;
     flex-direction: row;
@@ -32,10 +32,12 @@
     column-gap: 4em;
 
     @media (max-width: $desktop_sm) {
-            column-gap: 1em;
-            flex-wrap: wrap;
-        }
+        column-gap: 0;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
 }
+
 .imageContainer {
     display: flex;
     flex-direction: column;
