--- a/app/home/section/Section.module.scss
+++ b/app/home/section/Section.module.scss
@@ -23,12 +23,18 @@
     }
 
     &__container {
+        align-items: center;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
+        flex-direction: row;
         width: 100%;
         max-width: 1440px;
+        margin: 0 auto;
+        gap: 3em;
+        padding: 0 8em;
+
+        @media (max-width: $desktop_sm) {
+            padding: 0 1em;
+        }
 
         &__content {
             width: 50%;
@@ -38,16 +44,16 @@
             }
 
             &__title {
-                font-size: 2.5rem;
-                font-weight: 900;
+                font-size: $title-size;
+                font-weight: 700;
                 color: $text-light;
                 text-align: center;
-                position: relative;
                 color: $text-light;
                 text-shadow: 0 2px 3px rgba(0, 0, 0, 1);
+                position: relative;
 
                 @media (max-width: $desktop_sm) {
-                    font-size: 3rem;
+                    font-size: 1.8rem;
                     text-align: center;
                 }
 
@@ -56,7 +62,7 @@
                     display: block;
                     position: absolute;
                     width: 70px;
-                    height: 70px;
+                    height: 60px;
                     top: -55px;
                     left: -40px;
                     background-image: url('/assets/abreAspas-branco.svg');
@@ -67,7 +73,7 @@
 
                     @media (max-width: $desktop_sm) {
                         top: -70px;
-                        left: 25px;
+                        left: 15px;
                     }
                 }
 
@@ -77,7 +83,7 @@
                     position: absolute;
                     width: 70px;
                     height: 70px;
-                    bottom: -30px;
+                    bottom: -60px;
                     right: 0;
                     background-image: url('/assets/fechaAspas-branco.svg');
                     background-size: contain;
@@ -86,14 +92,14 @@
                     opacity: .5;
 
                     @media (max-width: $desktop_sm) {
-                        bottom: -80px;
-                        right: 15px;
+                        bottom: -45px;
+                        right: 25px;
                     }
                 }
             }
 
             &__selo {
-                width: 50%;
+                width: 40%;
                 height: auto;
                 margin-bottom: 8em;
 
