--- a/app/livros/slideCarrousel/Slide.module.scss
+++ b/app/livros/slideCarrousel/Slide.module.scss
@@ -2,54 +2,56 @@
 @import "../../styles/breakpoints";
 
 .keenSlider {
-    display: flex;
-    width: 60%;
-    overflow: hidden;
-    align-items: center;
-    align-items: flex-start;
-    margin: 0 auto;
-    padding: 4em 0 2em;
+  display: flex;
+  width: 100%;
+  overflow: hidden;
+  align-items: flex-start;
+  margin: 0 auto;
+  padding: 4em 0 2em;
+  max-width: 1440px;
 
-    @media (max-width: $desktop_sm) {
-        width: 100%;
-        padding: 0;
-    }
+  @media (max-width: $desktop_sm) {
+    width: 100%;
+    padding: 0;
+  }
 }
 
 .slideContainer {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  padding: 6em 0;
+  align-items: center;
+  max-width: 900px;
+  margin: 0 auto;
+
+  @media (max-width: $desktop_sm) {
+    padding: 4em 1em;
+  }
+
+  &__title {
+    font-size: $title-size;
+    color: $text-dark;
+    align-self: center;
+  }
+
+  &__text {
+    align-self: center;
+    font-size: $text-size;
+    font-weight: 500;
+    font-family: $font-secondary;
+    line-height: 28px;
+    color: $text-dark;
+    margin-bottom: 1.5em;
+    text-align: center;
     width: 100%;
-    justify-content: center;
-    background-color: $brand-golden-50;
-    padding: 4em 0;
+    margin-top: 1em;
 
     @media (max-width: $desktop_sm) {
-        padding: 4em 1em;
+      width: 100%;
     }
-
-    &__title {
-        font-size: 2em;
-        color: $text-dark;
-        align-self: center;
-    }
-
-    &__text {
-        align-self: center;
-        font-size: 1.2em;
-        font-weight: 500;
-        font-family: "Spectral", serif;
-        line-height: 1.5em;
-        color: $text-dark;
-        margin-bottom: 1.5em;
-        text-align: center;
-        width: 50%;
-        margin-top: 1em;
-
-        @media (max-width: $desktop_sm) {
-            width: 100%;
-        }
-    }
+  }
 }
 
 .navigation-wrapper {
@@ -80,3 +82,4 @@
 .dot.active {
   background: $brand-golden;
 }
+
