--- a/app/sobre/biografiaSection/Biografia.module.scss
+++ b/app/sobre/biografiaSection/Biografia.module.scss
@@ -31,17 +31,17 @@
             }
 
             &__title {
-                font-size: 32px;
-                font-family: brother-1816, sans-serif;
+                font-size: $title-size;
+                font-family: $font-primary;
                 line-height: 35px;
                 color: $text-dark;
                 margin-bottom: .5em;
             }
 
             &__text {
-                font-size: 18px;
+                font-size: $text-size;
                 font-weight: 500;
-                font-family: "Spectral", serif;
+                font-family: $font-secondary;
                 line-height: 25px;
                 color: $text-dark;
                 margin-bottom: 1em;
@@ -70,7 +70,7 @@
             &__caption {
                 font-size: 14px;
                 font-weight: 500;
-                font-family: "Spectral", serif;
+                font-family: $font-secondary;
                 color: $text-dark;
                 margin-top: .5em;
                 
