--- a/app/sobre/valoresSection/Valores.module.scss
+++ b/app/sobre/valoresSection/Valores.module.scss
@@ -35,8 +35,8 @@
             }
 
             &__title {
-                font-size: 32px;
-                font-family: brother-1816, sans-serif;
+                font-size: $title-size;
+                font-family: $font-primary;
                 font-weight: 900;
                 line-height: 35px;
                 color: $text-dark;
@@ -63,10 +63,10 @@
             }
 
             &__text {
-                font-size: 18px;
+                font-size: $text-size;
                 font-weight: 500;
-                font-family: "Spectral", serif;
-                line-height: 25px;
+                font-family: $font-secondary;
+                line-height: 28px;
                 color: $text-dark;
                 margin-bottom: 2em;
 
@@ -102,17 +102,17 @@
                     margin-bottom: 1.5em;
 
                     h4 {
-                        font-size: 20px;
+                        font-size: $subtitle-size;
                         font-weight: 600;
                         color: $text-dark;
                         margin-bottom: .5em;
                     }
 
                     p {
-                        font-size: 18px;
+                        font-size: $text-size;
                         font-weight: 500;
-                        font-family: "Spectral", serif;
-                        line-height: 25px;
+                        font-family: $font-secondary;
+                        line-height: 28px;
                         color: $text-dark;
                         margin-bottom: 2em;
                     }
@@ -125,7 +125,6 @@
             grid-row: 1;
             display: flex;
             flex-direction: column;
-            justify-content: center;
             width: 100%;
 
             @media (max-width: $desktop_sm) {
@@ -143,7 +142,7 @@
             &__caption {
                 font-size: 14px;
                 font-weight: 500;
-                font-family: "Spectral", serif;
+                font-family: $font-secondary;
                 color: $text-dark;
                 margin-top: .5em;
             }
