--- a/app/palestras/heroSection/HeroSection.module.scss
+++ b/app/palestras/heroSection/HeroSection.module.scss
@@ -15,6 +15,10 @@
         padding: 8em 8em 4em 8em;
         background: linear-gradient(90deg, rgba(0, 43, 115, 1) 0%, rgba(127, 5, 37, 1) 100%);
 
+        @media (max-width: $desktop_sm) {
+            padding: 8em 1em;
+        }
+
         &__title {
             font-size: $title-size;
             font-weight: 900;
