--- a/app/home/partnersSection/Partnners.module.scss
+++ b/app/home/partnersSection/Partnners.module.scss
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: center;
 
-    background-color: rgb(216, 223, 226);
+    background-color: #e3e3e3;
 
     width: 100%;
 
