--- a/app/contactos/form/Form.module.scss
+++ b/app/contactos/form/Form.module.scss
@@ -80,11 +80,11 @@
 }
 
 .spinner {
-  border: 4px solid #f3f3f3;
-  border-top: 4px solid #0070f3;
+  border: 5px solid white;
+  border-top: 5px solid $brand-light-blue;
   border-radius: 50%;
-  width: 24px;
-  height: 24px;
+  width: 32px;
+  height: 32px;
   animation: spin 1s linear infinite;
   margin: 0 auto;
 }
