--- a/app/home/heroSection/Hero.module.scss
+++ b/app/home/heroSection/Hero.module.scss
@@ -3,7 +3,7 @@
 
 
 .heroSection {
-    background-image: url('../../../public/assets/image-hero-top.jpg');
+    background-image: url('../../../public/assets/image-hero-top.webp');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
