--- a/app/home/channelSection/Channel.module.scss
+++ b/app/home/channelSection/Channel.module.scss
@@ -9,6 +9,7 @@
     padding: 4em 0;
     width: 100%;
     max-width: 1440px;
+    margin: 0 auto;
 
     @media (max-width: $desktop_sm) {
             display: flex;
