--- a/app/home/heroSection/Hero.module.scss
+++ b/app/home/heroSection/Hero.module.scss
@@ -3,25 +3,35 @@
 
 
 .heroSection {
-    background-image: url('../../../public/assets/image-hero-top.webp');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-
-    width: 100%;
+    position: relative;
+    overflow: hidden;
     height: 100vh;
 
 
     @media (max-width: $desktop_sm) {
         padding: 15em 1em 2em;
         height: 75vh;
+    }
 
-        background-position: 62% center;
+    &__bg {
+        position: absolute;
+        inset: 0;
+        z-index: -1;
+
+        img {
+            height: 100%;
+            object-fit: cover;
+            left: -753px;
+
+            @media (min-width: $desktop_sm) {
+                width: 100%;
+            }
+        }
+
     }
 
     &__title {
@@ -104,12 +114,12 @@
 
 }
 
-.containerHero{
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	max-width: 1440px;
-	margin: 0 auto;
+.containerHero {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 1440px;
+    margin: 0 auto;
     padding: 0 8em;
 
     @media (max-width: $desktop_sm) {
