novos ajustes de performance

--- a/app/home/heroSection/Hero.module.scss
+++ b/app/home/heroSection/Hero.module.scss
@@ -38,7 +38,7 @@
         align-self: self-start;
         display: inline-block;
         background-color: rgba(0, 0, 0, 0.5);
-        font-family: "Afacad", sans-serif;
+        font-family: $font-primary;
         color: white;
         font-size: $title-size;
         text-transform: uppercase;
