--- a/app/home/talkkSection/Talk.module.scss
+++ b/app/home/talkkSection/Talk.module.scss
@@ -39,7 +39,7 @@
         &__text {
             font-size: 18px;
             font-weight: 500;
-            font-family: "Spectral", serif;
+            font-family: $font-secondary;
             line-height: 25px;
             color: $text-light;
             text-align: center;
